# rrecutils

./: Cargo.toml
samples/: books.mustache  books.rec  entries.rec  has_default.rec
src/: contlines.rs  lib.rs
src/tools/: common.rs  debug.rs  format.rs  pretty.rs  select.rs  tojson.rs
