[package]
name = "rrecutils"
version = "0.1.0"
authors = ["Getty Ritter <gettylefou@gmail.com>"]

[lib]
name = "rrecutils"
path = "src/lib.rs"

[dependencies]
regex = "0.2"
serde = "*"
serde_json = "*"
clap = "2.27.1"
rustache = "*"

[[bin]]
name = "rr-pretty"
path = "src/tools/pretty.rs"

[[bin]]
name = "rr-to-json"
path = "src/tools/tojson.rs"

[[bin]]
name = "rr-sel"
path = "src/tools/select.rs"

[[bin]]
name = "rr-format"
path = "src/tools/format.rs"
